Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
        <h4>Link to an Email Address</h4>
        <p>If you would like to send me any recommendations of places to visit feel free to email me with the link below</p>
        <p><a href="mailto:naquessab@gmail.com">Send Email</a></p>
+
+
+       <div>
+         <p id="firstname">My name is Donald.</p>
+         <p id="hometown">I live in Duckburg.</p>
+       </div>
        
 <footer>
    <p> 2022 Naquessa Boddie &reg;</p>
