--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 <link rel="stylesheet" href="styles.css">
    </head>
    <body>
-      <!-- Write your HTML in this file! -->
-      <!-- <h1>This is a heading</h1> -->
-
+      <header>
+         <h1> Places I've traveled to</h1>
+      </header>
       <main>
-         <h1 class = "mainHeading">Places Visited</h1>
+         <h1 id ="mainHeading">Places Visited</h1>
          <!-- 
          <p class = "testP">This is webpage will take you on a journey to some of the places I have visited during the pandemic. I love to travel and visit new places.</p>
          -->
-         <div class="testP">
-            <p id="funParagraph">This is webpage will take you on a journey to some of the places I have visited during the pandemic. I love to travel and visit new places.</p>
+         <div class="funParagraph">
+            <p id="testP">This is webpage will take you on a journey to some of the places I have visited during the pandemic. I love to travel and visit new places.</p>
          </p>
           </div>
          
